--- a/Bron.html
+++ b/Bron.html
@@ -5,7 +5,7 @@
       <head>
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       </head>
-      <body>Verification: fcd54c0829950a7e</body>
+      <body></body>
   </html>
   <!-- Marquiz script start -->
   <script>
