--- a/onas.html
+++ b/onas.html
@@ -4,7 +4,7 @@
       <head>
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       </head>
-      <body>Verification: fcd54c0829950a7e</body>
+      <body></body>
   </html>
 <head>
   <!-- Marquiz script start -->
