--- a/meni.html
+++ b/meni.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
-    <body>Verification: fcd54c0829950a7e</body>
+    <body></body>
 </html>
 <html lang="en">
   <!-- Marquiz script start -->
