--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <a class='nav-item' href="index.html">ГЛАВНАЯ</a>
                 <a class='nav-item' href="meni.html">МЕНЮ</a>
                 <a class='nav-item' href="onas.html">О НАС</a>
-                <a class='nav-item' href="Главная.html">БРОНЬ</a>
+                <a class='nav-item' href="Bron.html">БРОНЬ</a>
             </div>
 
             <div class='cart'>
